--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@types/d3": "^5.7.2",
     "bootstrap-css-only": "^4.3.1",
     "d3-ng2-service": "^2.2.0",
+    "d3-selection": "~1.3.0",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
